--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,41 @@ button {
   height: 100px;
   width: 100px;
   font-size: 50px;
+  margin: 20px;
+  border-radius: 100px;
+  background-color: purple;
+  border: 5px solid white;
+}
+
+.display-temperature {
+  height: 300px;
+  width: 300px;
+  background-color: rgb(110, 209, 209);
+  border-radius: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 40px 0;
+  border: 10px solid white;
+  transition: background 0.5s;
 }
 
 
+.container {
+  height: 550px;
+  width: 400px;
+  background-color: rgb(6, 119, 6);
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hot {
+  background-color: red;
+}
+
+.cold {
+  background-color: blue;
+}
